# banknote-authentication

./: .gitignore  README.md  TODO.md  clear.sh  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
configs/: common.yaml  trainer.yaml
configs/models/: cnn.yaml  efficientnet_b0.yaml  efficientnet_b3.yaml  mobilenet_v3.yaml  resnet50.yaml  swin_transformer.yaml  vit.yaml
configs/modules/: authenticity.yaml  denomination.yaml  quality.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  post_phase_2_context.md  post_phase_5_context.md  post_phase_6_context.md  post_phase_7_context.md  post_phase_8_context.md  project_context.md
notebooks/: 01_authenticity_dataset._eda.ipynb  01_denomination_dataset2_eda.ipynb  01_denomination_dataset_eda.ipynb  06_denomination_train.ipynb
scripts/: __init__.py  _common.py  compare_models.py  dashboard.py  evaluate.py  generate_gradcam.py  predict.py  preprocess.py  train.py
src/application/: context.py  evaluation.py  experiment.py  factories.py  gradcam.py  inference.py  training.py
src/augmentation/: transforms.py
src/checkpoint/: io.py  state.py
src/core/: config.py  experiment.py  trainer.py
src/dashboard/: app.py
src/datasets/: dataloader.py  dataset.py  registry.py
src/evaluation/: confusion_matrix.py  evaluator.py  metrics.py  serialization.py  state.py
src/explainability/: gradcam.py  hooks.py  state.py  (+2 more)
tests/: test_checkpoint.py  test_cnn.py  test_common_scripts.py  test_dataset.py  test_device.py  test_end_to_end.py  test_losses.py  test_trainer.py
(+83 files in other folders)
